--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
     ],
     "require": {
         "php" : ">=7.1.3",
-        "guzzlehttp/guzzle": "~5.0"
+        "guzzlehttp/guzzle": "~5.0",
+        "ext-curl": "*",
+        "ext-http": "*"
     },
     "require-dev": {
         "phpunit/phpunit" : "^8"
